# youtube-digest

./: .env.example  .gitignore  README.md  pyproject.toml
src/youtube_digest/: bot.py  cache.py  config.py  ideas.py  llm.py  metadata.py  prompts.py  storage.py  transcript.py
systemd/: youtube-digest.service
