[project]
name = "youtube-digest"
version = "0.1.0"
description = "Telegram bot: YouTube link → transcript → AI summary"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15",
    "youtube-transcript-api>=1.0.0",
    "httpx>=0.28",
    "pydantic-settings>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
